fixed dark mode colors + added monaco custom colors

--- a/packages/web-ui/styles.css
+++ b/packages/web-ui/styles.css
@@ -121,7 +121,7 @@
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-    --destructive-muted-foreground: 0 74% 42%;
+    --destructive-muted-foreground: 0 74% 52%;
 
     --success: 142 76% 36%;
     --success-foreground: 120 87% 97%;
